client/src/assets/style.css
body {
  background-image: url(../assets/images/background.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
  /* overflow: hidden; */
}

/* Header */

@import url('https://fonts.googleapis.com/css2?family=Syncopate&display=swap');

.titleBar {
  border: rgb(121, 121, 121) 1px solid;
  height: 80px;
  z-index: +2;
  box-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);

}

.icon {
    width: 100px;
    height: auto;
}

.appTitle {
    color: black;
    font-weight: bolder;
    font-size: 30px;
    font-family: 'Syncopate';
    text-shadow:
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25);
}

.navBrand {
    padding-left: 10px;
    margin-bottom: 2.5px;
}

.navigation {
    margin-top: 2px;
}

.navToggler {
    padding-right: 20px;
}

/* Carousel */

.carouselText {
  color: rgb(218, 248, 163);
  font-weight: bold;
  font-family: Arial, Helvetica, sans-serif;
  text-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  2px 2px 0 rgba(0,0,0,.25),
  6px 6px 6px rgba(0,0,0,.25);
}

.banner-user{
    height: 400px;
  }
.banner-user-elem{
  text-align: center;
  color: rgb(255, 255, 255);
  position: relative;
  overflow: hidden;
}

.banner-user-elem .banner-user-title{
  font-size: 32px;
  top: 40%;
}

.banner-user-elem .banner-user-text{
  top: 40%;
}

.banner-anim-elem .bg{
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;
}

/* searchBar */

.searchBar {
  border-top: rgb(121, 121, 121) 1px solid;
  z-index: +1;
  box-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);

}

.searchIcon {
  margin-top: 23px;
  margin-right: 10px;
  margin-bottom: 7px;

}

.searchForm{
  margin-top: 5px;
  margin-left: 40px;
  margin-right: 60px;
  margin-bottom: 7px;



}

.beachButtons {
  margin-top: 5px;
  margin-left: 10px;
  margin-bottom: 5px;

  box-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);

  text-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

/* Login modal */

.modaler .modal-content {
  background-color: rgba(248, 248, 248, 0.952);
  border-radius: 15px;
  border: 2px solid rgb(168, 168, 168);
}

.modal-content {
  margin-left: auto;
  margin-right: auto;
  max-width: 350px;
  box-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

h1 {
  font-weight: bolder;
  font-size: 40px;
  font-family: 'Syncopate';
  text-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

.accountCircle {
  margin-top: 22px;
  margin-right: 10px;
}

#loginForm {
  height: 300px;
  display: flex;
  flex-direction: column; /* defined the main axis */
  justify-content: center; /* y-axis */
  align-items: center; /* x-axis */
}

.loginButtons {
  margin-top: 40px;
  margin-left: 70px;
  display: flex;
  float: right;
}

.registerCont {
  background-color: rgb(241, 244, 248);
  border: 1px solid rgb(168, 168, 168);
  padding-top: 30px;

  display: flex;
  flex-direction: column; /* defined the main axis */
  justify-content: center; /* y-axis */
  align-items: center; /* x-axis */

  box-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

.reportCont {
  background-color: rgba(241, 244, 248, 0.644);
  border: 1px solid rgb(168, 168, 168);
  padding-top: 30px;

  display: flex;
  flex-direction: column; /* defined the main axis */
  justify-content: center; /* y-axis */
  align-items: center; /* x-axis */

  box-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

.signupButton {
  display: flex;
  float: right;
}

/* surf report page */

#surfReportPage {
  overflow-y: auto;
  /* overflow: hidden; */

}

#surflineLogo {
  width: 70px;
  height: auto;
}

.spinner {
  margin-top: 200px;
}

/*  Footer */

.footer {
  background-color: rgb(56, 56, 56);
  color: antiquewhite;
  position: fixed;
  bottom: 0;
  width: 100%;
}

/* Page Animation transitions */

.page {
  position: absolute;
  top: 80px;
  left: 0;
  right: 0;
  bottom: 0;
}

.slide-appear 
.slide-enter {
  opacity: 0;
  z-index: 1;
}
.slide-appear-active
.slide-enter.slide-enter-active {
  opacity: 1;
  transition: opacity 300ms linear 150ms;
}
.slide-exit {
  opacity: 1;
}
.slide-exit.slide-exit-active {
  opacity: 0;
  transition: opacity 150ms linear;
}

/* charts & graph*/

#reportRow {
  padding: 10px;
}

h4 {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-weight: bold;
  text-shadow:   
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

p {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-weight: bold;
  font-size: 14px;
  text-shadow:   
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

.waveChart, #tideChart, #swellsChart, .windChart, #weatherChartDay {
  padding-top: 10px;
  padding: 10px;
  background-color: rgb(236, 241, 255);
  border: rgb(216, 216, 219) 1px solid;
  border-radius: 8px;
  height: 120px;
  /* min-width: 150px; */
  color: rgb(88, 88, 88);
  box-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

.graph {
  position: relative;
  height:40vh; 
  background-color: rgb(236, 241, 255);
  border: rgb(216, 216, 219) 1px solid;
  border-radius: 8px;
  color: rgb(88, 88, 88);
  box-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

.mobileGraph {
  background-color: rgb(236, 241, 255);
  border: rgb(216, 216, 219) 1px solid;
  border-radius: 8px;
  color: rgb(88, 88, 88);
  box-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

/* dynamic classes for chart optimalScores */

.fontYellow {
  background-color: rgb(225, 255, 92);
  border-radius: 6px;
}

.fontGreen {
  background-color: rgb(35, 196, 56);
  color: rgb(240, 240, 240);
  border-radius: 6px;
}

#weatherChartNight {
  padding-top: 10px;
  padding: 10px;
  background-color: rgb(128, 128, 128);
  color: rgb(240, 240, 240);
  border-radius: 8px;
  height: 120px;
  /* min-width: 150px; */
  box-shadow:
  -1px -1px 0 rgba(255, 255, 255, 0),
  1px 1px 0 rgba(0,0,0,.25),
  3px 3px 3px rgba(0,0,0,.25);
}

.weatherIcon {
  width: 36px;
  height: auto;
  -webkit-filter: drop-shadow(1px 1px 0 rgba(0,0,0,.25));
  filter:         drop-shadow(3px 3px 3px rgba(0,0,0,.25)); 
}


/* Media Queries */


@media screen and (max-width: 551px) {

/* Navbar */

  .titleBar {
    height: auto;

  }

  .appTitle {
    color: black;
    font-weight: bolder;
    font-size: 15px;
    margin-left: -20px;
    text-shadow:
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25);
  }

  /* Carousel */

  .banner-user{
    height: 300px;
  }

  .banner-user-elem{
    text-align: center;
    color: rgb(255, 255, 255);
    position: relative;
    overflow: hidden;
  }
  
  .banner-user-elem .banner-user-title{
    font-size: 28px;
    top: 30%;
  }
  
  .banner-user-elem .banner-user-text{
    top: 32%;
  }
  
  .banner-anim-elem .bg{
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    overflow: hidden;
  }

  /* page */

  .page {
    top: 90px;
  }
}

@media screen and (max-width: 820px) {
  .titleBar {
    height: auto;

  }

  
  /* lineGraph */

  .lineG {
    margin-left: auto;
    margin-right: auto;
  }

  #surflineLogo {
    width: 45px;
    height: auto;
  }
  
}

@media screen and (max-width: 991px) {

  p {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: bold;
    font-size: 12px;
    text-shadow:   
    -1px -1px 0 rgba(255, 255, 255, 0),
    1px 1px 0 rgba(0,0,0,.25),
    3px 3px 3px rgba(0,0,0,.25);
  }
}

